--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,63 @@
   transform: rotate(70deg);
 }
 
+.messages {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.message-row {
+  width: 100%;
+}
+
+.message {
+  background: black;
+  color: white;
+  border-radius: 10px;
+  margin: 4px;
+  display: inline-block;
+  padding: 4px 12px;
+}
+
 .text-input {
   background: rgba(255, 255, 255, 0.2);
   border-top: 1px solid white;
   height: 2.5rem;
   font-family: "Open Sans", sans-serif;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.send-button {
+  position: absolute;
+  right: 0.65rem;
+  top: 0.5rem;
+  border-radius: 100%;
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  cursor: pointer;
+  outline: none;
+  height: 1.4rem;
+  width: 1.4rem;
+}
+
+.send-button[disabled] {
+  background: grey;
+  cursor: default;
+}
+
+.input {
+  height: 1.65rem;
+  width: calc(100% - 1rem);
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 0.8rem;
+  outline: none;
+  border: 1px solid white;
+  color: white;
+  padding-left: 10px;
 }
